 ####    #### ####    #### ############ ####         #### ####
 ####    #### ####    #### ####    #### ####         ####  ####
  ####  ####   ####   #### ####    #### ####         ####   ####
   ########     ########## ####    #### ####         ####    ####
       #####
        #####       Quake Army Knife 6.5 Changelog

6.5.0 Beta 4
============

* [DanielPharos]: Made an option to set the amount of lines of text in the console.

* [DanielPharos]: Fixed the duplicators to export correctly again and the map portals not drawing anymore.

* [cdunde]: Added many new beizer shapes and functions developed by our friends in Russia,
          - the Shine team, Nazar and vodkins.

* [DanielPharos]: Updated the miter edge function with some error messages, fixed a division
          - by 0 in it, and made the option disable correctly. Also, added some InfoBase
          - documentation about it.

* [cdunde/DanielPharos]: Added two new function methods to Subdivide selected faces
          - into 3 and 4 new triangles each.

* [cdunde]: Setup linear center handle selected vertexes edge extrusion function.

* [DanielPharos/cdunde]: Changed to keep Texture Position dialog open and update dynamically.

* [cdunde]: Separated editors background image dialogs and setup to save all of their settings.

* [DanielPharos]: Another bunch of hugh image fixes: everything should work again! The DevIL
          - implementation currently doesn't support loading palette files, and saving them
          - isn't supported by either. But the rest works perfectly! Also, TGA files now also
          - use DevIL and FreeImage.

* [DanielPharos]: BMP and PCX files are now also using DevIL and FreeImage to load and save.

* [cdunde/DanielPharos]: Added new function "Merge Vertexes" to the "Vertex Commands" menu.
          - Setup to allow merging of a base vertex and other multiple selected vertexes.
