@@ -15,6 +15,8 @@ $Id$
 6.5.0 Beta 4
 ============
 
+* [DanielPharos]: Made a rudimentary, but functional MD3 file saving code. You can now save MD3 models!
+
 * [DanielPharos]: Made an option to set the amount of lines of text in the console.
 
 * [DanielPharos]: Fixed the duplicators to export correctly again and the map portals not drawing anymore.
